kubernetes/thebiggame/musicparty/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: musicparty
  labels:
    app: musicparty
spec:
  selector:
    app: musicparty
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
